codex-rs/tui/src/history_cell/snapshots/codex_tui__history_cell__messages__tests__local_image_only_user_message_remains_visible.snap
---
source: tui/src/history_cell/messages_tests.rs
expression: "ratatui::text::Text::from(display)"
---

  [Image #1]
